# spudkit

./: .pre-commit-config.yaml  Cargo.toml  README.md  justfile  release-plz.toml
.github/workflows/: cargo-audit.yml  ci.yml  release-plz.yml
crates/potato-cli/: Cargo.toml
crates/potato-cli/src/: main.rs
crates/potato-client/: Cargo.toml  tauri.conf.json
crates/potato-client/frontend/: index.html  potato-polyfill.js
crates/potato-client/src/: lib.rs  main.rs
crates/potato-gui/: Cargo.toml  index.html  package.json  pnpm-lock.yaml  tauri.conf.json  vite.config.ts
crates/potato-gui/frontend/: index.html  potato-polyfill.js
crates/potato-gui/src/: main.rs
crates/potato-gui/src-frontend/: tauri.d.ts
crates/potato-gui/src-frontend/interception/: forward.ts  index.ts  stream.ts
crates/potato-server/: Cargo.toml
crates/potato-server/src/: api.rs  app_manager.rs  calls.rs  container.rs  lib.rs  main.rs  registry.rs  utils.rs
crates/potato-server/src/api/: mod.rs
crates/potato-server/src/api/app/: router.rs  state.rs
crates/potato-server/src/api/app/endpoints/: call.rs  create_call.rs  mod.rs  send_stdin.rs  stdin.rs
crates/potato-server/src/api/management/: router.rs
crates/potato-server/src/api/management/endpoints/: activate.rs
crates/potato-server/tests/: integration_test.rs
crates/potato-server/tests/fixtures/app/templates/: echo.sh.html
crates/potato-transport/: Cargo.toml
crates/potato-transport/src/: lib.rs  socket.rs  sse.rs
crates/spud-app-chromium/: CHANGELOG.md  Cargo.toml
crates/spud-app-chromium/src/: main.rs
crates/spudkit/: CHANGELOG.md  Cargo.toml
crates/spudkit-cli/: CHANGELOG.md  Cargo.toml
crates/spudkit-cli/src/: build.rs  main.rs
crates/spudkit-client/: CHANGELOG.md  Cargo.toml
crates/spudkit-client/src/: lib.rs
crates/spudkit-client/tests/: list_spuds_test.rs
crates/spudkit-core/: CHANGELOG.md  Cargo.toml
crates/spudkit-core/src/: spud.rs
crates/spudkit-gui/: CHANGELOG.md  Cargo.toml  index.html  package.json  pnpm-lock.yaml  tauri.conf.json  tsconfig.json  vite.config.ts
crates/spudkit-gui/src/: main.rs
crates/spudkit-gui/src-frontend/: polyfill.ts
crates/spudkit-gui/src-frontend/interception/: index.ts  stdin.ts
crates/spudkit-server/: Cargo.toml
crates/spudkit-server/src/: container.rs  main.rs
crates/spudkit-server/src/api/: mod.rs
crates/spudkit-server/src/api/app/: mod.rs  router.rs
crates/spudkit-server/src/api/app/endpoints/: call.rs
crates/spudkit-server/src/api/management/: mod.rs  router.rs
crates/spudkit-server/src/api/management/endpoints/: activate.rs  list_apps.rs
crates/spudkit-server/tests/: integration_test.rs
crates/spudkit-transport/: Cargo.toml
crates/spudkit-transport/src/: lib.rs
crates/spudkit/src/: app_manager.rs  container.rs  lib.rs  main.rs  polyfill.js  sse_stream.rs  utils.rs
crates/spudkit/src/api/app/: router.rs  state.rs
crates/spudkit/src/api/app/endpoints/: call.rs  files.rs  mod.rs  render.rs  ws_stdin.rs
crates/spudkit/src/api/management/: router.rs
crates/spudkit/src/api/management/endpoints/: activate.rs  list_spuds.rs  mod.rs
crates/spudkit/tests/: calls_test.rs  chunked_output_test.rs  files_test.rs  integration_test.rs  label_test.rs  list_spuds_endpoint_test.rs  list_test.rs  render_test.rs  shared_app_data_test.rs
crates/spudkit/tests/fixtures/app/templates/: sh.sh.html
crates/spudkit/tests/helpers/: mod.rs
e2e/: package.json  pnpm-lock.yaml  wdio.book-search.conf.ts  wdio.conf.ts
e2e/specs/: app-loads.ts  book-search.ts
images/base/: Dockerfile
images/base/dispatcher/src/: main.rs
images/book-search/: Dockerfile  index.html  search.sh  search.sh.html
images/hello-simple/: Dockerfile  bench.sh  chat.sh  echo.sh  index.html
images/hello-world/: Dockerfile  calculate-loop.sh  calculate.py  calculate.sh  index.html  noop-loop.sh
images/hello-world/frontend/: package.json  pnpm-lock.yaml
images/hello-world/frontend/src/: App.tsx  index.css
images/hello-world/frontend/src/components/ui/: button.tsx
src/: lib.rs  main.rs
tests/: integration_test.rs
