[package]
name = "potato-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "potato"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.149"
anyhow = "=1.0.102"
clap = { version = "=4.6.0", features = ["derive"] }
potato-client = { path = "../potato-client" }
tokio = { version = "=1.50.0", features = ["rt-multi-thread", "macros", "io-std"] }
