[package]
name = "potato-gui"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "potato-app"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
tauri = { version = "=2.10.3", features = [] }
tokio = { version = "=1.50.0", features = ["full"] }
serde_json = "=1.0.149"
potato-client = { path = "../potato-client" }
mime_guess = "=2.0.5"

[build-dependencies]
tauri-build = "=2.5.6"
