[package]
name = "potato-transport"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
anyhow = "=1.0.102"
serde_json = "=1.0.149"
hyper = "=1.8.1"
hyper-util = { version = "=0.1.20", features = ["client-legacy", "tokio"] }
hyperlocal = "=0.9.1"
http-body-util = "=0.1.3"
bytes = "=1.11.1"
tokio = { version = "=1.50.0", features = ["rt"] }
