[package]
name = "spudkit-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "spud"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.149"
anyhow = "=1.0.102"
clap = { version = "=4.6.0", features = ["derive"] }
spudkit-client = { path = "../spudkit-client" }
tokio = { version = "=1.50.0", features = ["rt-multi-thread", "macros", "io-std"] }
