[package]
name = "spudkit-cli"
version.workspace = true
edition = "2024"
description = "Run spuds in the CLI"
license.workspace = true
repository.workspace = true

[[bin]]
name = "spud"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.149"
anyhow = "=1.0.102"
clap = { version = "=4.6.0", features = ["derive"] }
spudkit-client.workspace = true
tokio = { version = "=1.50.0", features = ["rt-multi-thread", "macros", "io-std"] }

[dev-dependencies]
rstest.workspace = true
