[package]
name = "spudkit-cli"
version.workspace = true
edition = "2024"
description = "Build and run spuds from the CLI"
license.workspace = true
repository.workspace = true

[[bin]]
name = "spud"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.149"
anyhow = "=1.0.102"
clap = { version = "=4.6.0", features = ["derive"] }
spudkit-client.workspace = true
spudkit-core.workspace = true
tokio = { version = "1.51.0", features = ["rt-multi-thread", "macros", "io-std"] }
which = "=8.0.2"
tar = "0.4"
walkdir = "2"
bollard = "=0.20.2"
futures-util = "=0.3.32"

[dev-dependencies]
rstest.workspace = true
tar = "0.4"
tempfile = "3"
