[package]
name = "spudkit-client"
version.workspace = true
edition = "2024"
description = "Client library for communicating with the spudkit server"
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
spudkit-transport.workspace = true
anyhow = "=1.0.102"
serde_json = "=1.0.149"
