[package]
name = "spudkit-core"
version.workspace = true
edition = "2024"
description = "Core types and transport layer for spudkit"
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = "=1.0.102"
serde_json = "=1.0.149"
hyper = "=1.9.0"
hyper-util = { version = "=0.1.20", features = ["client-legacy", "tokio"] }
hyperlocal = "=0.9.1"
http-body-util = "=0.1.3"
bytes = "=1.11.1"
tokio = { version = "=1.50.0", features = ["rt"] }

[dev-dependencies]
rstest.workspace = true
