[package]
name = "spudkit-core"
version.workspace = true
edition = "2024"
description = "Core types and transport layer for spudkit"
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = "=1.0.104"
serde_json = "=1.0.150"
hyper = "=1.10.1"
hyper-util = { version = "=0.1.20", features = ["client-legacy", "tokio"] }
hyperlocal = "=0.9.1"
http-body-util = "=0.1.4"
bytes = "=1.12.1"
tokio = { version = "1.51.0", features = ["rt"] }

[dev-dependencies]
rstest.workspace = true
