[package]
name = "spudkit-gui"
version.workspace = true
edition = "2024"
description = "Run GUI spuds"
license.workspace = true
repository.workspace = true

include = ["src/**/*", "dist/**/*", "build.rs", "icons/**/*", "tauri.conf.json", "gen/**/*", "Cargo.toml"]

[[bin]]
name = "spud-app"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
tauri = { version = "=2.10.3", features = [] }
tokio = { version = "=1.50.0", features = ["full"] }
serde_json = "=1.0.149"
spudkit-client.workspace = true
mime_guess = "=2.0.5"

[dev-dependencies]
rstest.workspace = true

[build-dependencies]
tauri-build = "=2.5.6"
