[package]
name = "spudkit-server"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
axum = "=0.8.8"
tokio = { version = "=1.50.0", features = ["full"] }
hyper-util = { version = "=0.1.20", features = ["tokio"] }
tower = "=0.5.3"
bollard = "=0.20.2"
futures-util = "=0.3.32"
tower-http = { version = "=0.6.8", features = ["fs"] }
tar = "=0.4.45"
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.149"
tokio-stream = "=0.1.18"
uuid = { version = "=1.22.0", features = ["v4"] }
os_pipe = "=1.2.3"
anyhow = "=1.0.102"
clap = { version = "=4.6.0", features = ["derive"] }
spudkit-transport = { path = "../spudkit-transport" }
minijinja = "=2.18.0"
form_urlencoded = "=1.2.2"

[dev-dependencies]
hyper = "=1.8.1"
http-body-util = "=0.1.3"
tower = { version = "=0.5.3", features = ["util"] }
rstest = "=0.26.1"
