[package]
name = "spudkit"
version.workspace = true
edition = "2024"
description = "Server for managing spuds"
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
axum = { version = "=0.8.9", features = ["ws"] }
tokio = { version = "1.51.0", features = ["full"] }
hyper-util = { version = "=0.1.20", features = ["tokio"] }
tower = "=0.5.3"
bollard = "=0.21.0"
futures-util = "=0.3.32"
mime_guess = "=2.0.5"
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.150"
tokio-stream = "=0.1.18"
uuid = { version = "=1.23.4", features = ["v4"] }
anyhow = "=1.0.102"
clap = { version = "=4.6.1", features = ["derive"] }
spudkit-core.workspace = true
minijinja = "=2.21.0"
dirs = "=6.0.0"
form_urlencoded = "=1.2.2"
bytes = "=1.12.0"

[dev-dependencies]
hyper = "=1.10.1"
http-body-util = "=0.1.3"
tower = { version = "=0.5.3", features = ["util"] }
rstest.workspace = true
